<resources>
    <string name="app_name">DesignUI</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hira_riaz">Hira Riaz</string>
    <string name="ux_ui_designer">UX/UI Designer</string>
    <string name="income">Income</string>
    <string name="income_count">$8900</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_count">$5500</string>
    <string name="loan">Loan</string>
    <string name="loan_count">$890</string>
    <string name="overview">Overview</string>
    <string name="date">MMMM DD, YYYY</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="all">All</string>
    <string name="see_all">See all</string>
    <string name="today">Today</string>
    <string name="payment">Payment</string>
    <string name="see_details">See Details</string>
    <string name="home">Home</string>
    <string name="money">Money</string>
    <string name="account">Account</string>
    <string name="create">Create</string>
</resources>