<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/today"
        android:textColor="@color/color_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvToday">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/payment"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgStatus"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvContentStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/payment"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/imgStatus"
                app:layout_constraintTop_toBottomOf="@id/tvStatus" />

            <TextView
                android:id="@+id/tvPriceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_count"
                app:layout_constraintBottom_toBottomOf="@id/tvContentStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvContentStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/imgTest"
        app:layout_constraintEnd_toEndOf="@+id/imgTest"
        app:layout_constraintStart_toStartOf="@+id/imgTest"
        app:layout_constraintTop_toTopOf="@+id/imgTest" />

    <ImageView
        android:id="@+id/imgTest"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_account"
        app:layout_constraintTop_toBottomOf="@id/cardViewStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvSeeDetails"/>

    <ImageView
        android:id="@+id/imgAround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account"
        app:layout_constraintCircle="@id/imgTest"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="100dp"/>

    <TextView
        android:id="@+id/tvSeeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:text="@string/see_details"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@drawable/background_textview_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>